turk-one/global.css
/* CSS declarations go here */
body {
    background-color: #F2F2F2;
}

@media screen and (min-width: 62em) {
    .md-fixed {
        position: fixed;
    }
}

.btn-continue {
    letter-spacing: 3px;
    text-transform: uppercase;
}

.top-buffer-100 {
    margin-top: 100px;
}

.top-buffer-150{
    margin-top: 150px;
}

.bottom-buffer-100 {
    margin-bottom: 100px;
}

.bottom-buffer-150 {
    margin-bottom: 150px;
}

.top-buffer-50 {
    margin-top: 50px;
}

.bottom-buffer-50 {
    margin-bottom: 50px;
}

.top-buffer-25 {
    margin-top: 25px;
}

.bottom-buffer-25 {
    margin-bottom: 25px;
}

.center {
    float:none;
    margin: 0 auto;
}

.bg-white {
    background-color: white;
}

.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

